infrastructure/aws/terraform_storage/modules/security_group/main.tf
#Create Security Group
resource "aws_security_group" "app_sg" {
  name        = "app_sg"
  description = "Allow TLS inbound traffic"
  vpc_id      = "${var.vpc_id}"

  # ingress {
  #   # TLS (change to whatever ports you need)
  #   from_port   = 22
  #   to_port     = 22
  #   protocol    = "tcp"
  #   # Please restrict your ingress to only necessary IPs and ports.
  #   # Opening to 0.0.0.0/0 can lead to security vulnerabilities.
  #   cidr_blocks     = ["0.0.0.0/0"]
  # }
  # ingress {
  #   # TLS (change to whatever ports you need)
  #   from_port   = 80
  #   to_port     = 80
  #   protocol    = "tcp"
  #   # Please restrict your ingress to only necessary IPs and ports.
  #   # Opening to 0.0.0.0/0 can lead to security vulnerabilities.
  #   cidr_blocks     = ["0.0.0.0/0"]
  # }
  # ingress {
  #   # TLS (change to whatever ports you need)
  #   from_port   = 443
  #   to_port     = 443
  #   protocol    = "tcp"
  #   # Please restrict your ingress to only necessary IPs and ports.
  #   # Opening to 0.0.0.0/0 can lead to security vulnerabilities.
  #   cidr_blocks     = ["0.0.0.0/0"]
  # }
  # ingress {
  #   # TLS (change to whatever ports you need)
  #   from_port   = 8080
  #   to_port     = 8080
  #   protocol    = "tcp"
  #   # Please restrict your ingress to only necessary IPs and ports.
  #   # Opening to 0.0.0.0/0 can lead to security vulnerabilities.
  #   cidr_blocks     = ["0.0.0.0/0"]
  # }
  # load balancer's request
  ingress {
    # TLS (change to whatever ports you need)
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups = ["${aws_security_group.lb_sg.id}"]
  }
  ingress {
    # TLS (change to whatever ports you need)
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    security_groups = ["${aws_security_group.lb_sg.id}"]
  }
  ingress {
    # TLS (change to whatever ports you need)
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    security_groups = ["${aws_security_group.lb_sg.id}"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  tags = {
    Name = "app_sg"
  }
}

resource "aws_security_group" "rds_sg" {
  name = "rds_sg"
  description = "Allow TLS inbound traffic"
  vpc_id      = "${var.vpc_id}"

  ingress {
    # TLS (change to whatever ports you need)
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    # Please restrict your ingress to only necessary IPs and ports.
    # Opening to 0.0.0.0/0 can lead to security vulnerabilities.

    security_groups = ["${aws_security_group.app_sg.id}"]
  }

  tags = {
    Name = "rds_sg"
  }
}

resource "aws_security_group" "lb_sg" {
  name = "lb_sg"
  description = "load balancer security group"
  vpc_id      = "${var.vpc_id}"

  ingress {
    # TLS (change to whatever ports you need)
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    # Please restrict your ingress to only necessary IPs and ports.
    # Opening to 0.0.0.0/0 can lead to security vulnerabilities.
    cidr_blocks     = ["0.0.0.0/0"]
  }

  #instance listenser
  egress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    cidr_blocks     = ["0.0.0.0/0"]
  }
  # instance health check
  egress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  tags = {
    Name = "lb_sg"
  }
}
